# rwc

./: .env  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yaml  run-tests.sh
.github/workflows/: ci.yml
resources/test/: test_input.txt
src/: lib.rs  main.rs  rwc.rs
tests/: cli.rs
