[package]
name = "rwc"
version = "0.1.0"
edition = "2021"
description = "A simple clone of the unix wc command written in the crab language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
